Fix app header not showing or not showing correctly
Making the app/product name italic to show the difference

--- a/resources/sass/templates/admin/dashboard/index.scss
+++ b/resources/sass/templates/admin/dashboard/index.scss
@@ -479,6 +479,10 @@
 #status-dialog {
     .dialog-content {
         width: 400px;
+
+        h3 {
+            word-break: break-word;
+        }
     }
 
     .status-dialog-textarea {
